# ScryXPNG

./: .gitignore  Cargo.toml  README.md
card_lists/: blb.animated_army.txt  blb.set.txt
src/: main.rs
src/ui/: mod.rs
src/ui/app_data/: context.rs  mod.rs  status.rs
src/ui/application/: app.rs  backend.rs  commands.rs  mod.rs  text_display.rs
src/ui/ui_callbacks/: area.rs  block.rs  mod.rs  render.rs  style.rs
