[package]
name = "MTGPNG"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.15"
dialoguer = "0.9"
thiserror = "1.0.64"
anyhow = "1.0.89"
ratatui = "0.28.1"
crossterm = "0.28.1"
log = "0.4.22"
env_logger = "0.11.5"
color-eyre = "0.6.3"
itertools = "0.13.0"
